data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1156.wast
;; 7. **Test Description**: A `br_table` with mixed valid and out-of-bounds target labels, and an index that oscillates between valid and invalid values during execution.    - **Constraint Checked**: Consistent and correct behavior when alternating between valid and invalid indices.    - **Edge Case Relation**: Ensures robust performance with dynamic index values that straddle the line between valid and invalid ranges.

(assert_invalid
  (module
    (func (param i32) (param i32) (result i32)
      (block (result i32)
        (loop (result i32)
          (block (result i32)
            (br_table 0 1 2 (local.get 1) (local.get 0))
          )
        )
      )
    )
  )
  "unknown label"
)